--- a/jul23/widgets/css/main.css
+++ b/jul23/widgets/css/main.css
@@ -91,6 +91,7 @@ body {
 .active {
   font-weight: 700;
   background: rgb(70, 130, 180, 0.75);
+  /* border-bottom: none !important; */
 }
 
 #weather {
@@ -122,4 +123,36 @@ body {
   padding: 20px;
   font-size: 30px;
   font-weight: 300;
+}
+
+#autocomplete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#autocomplete-inner {
+  width: 620px;
+  margin: 25px;
+  background: rgb(70, 130, 180, 0.6);
+  border-radius: 7px;
+  border: 1px solid snow;
+  color: snow;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-family: sans-serif;
+  padding: 15px 0 10px 0;
+}
+
+#autocomplete input {
+  width: 500px;
+  padding: 5px;
+  font-size: 15px;
+}
+
+#autocomplete li {
+  padding: 5px;
+  list-style: circle;
 }
