--- a/jul2018/jul26/js30-11-video-player/style.css
+++ b/jul2018/jul26/js30-11-video-player/style.css
@@ -154,3 +154,8 @@ input[type=range]::-moz-range-thumb {
   background: #ffc600;
   cursor: pointer;
 }
+
+.viewer:-webkit-full-screen {
+  width: 100%;
+  height: 100%;
+}
